# unlimited-skills

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  DONATE.md  LICENSE  README-pypi.md  README.md  SECURITY.md  SERVICE-TERMS.md  SUPPORT.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/: FUNDING.yml  labels.yml
docs/: adoption-roadmap.md  agent-migrations.md  agent-skill-adaptation.md  architecture.md  billing-lifecycle-cross-repo-e2e.md  billing-status.md  business-context-provider.md  catalog-browser.md  catalog-feedback.md  catalog-quality.md  claude-code-plugin.md  cli-contracts.md  community-skills.md  community-submission-review.md  compatibility.md  context-reduction-model.md  enterprise-skill-lock.md  enterprise-trust-stack-status.md  eval-release-gates.md  feedback.md  first-run-setup.md  governance-dashboard.md  hosted-catalog-model.md  hosted-registry-api.md  hub-allowlist-sync.md  hub-plan-heartbeat.md  install-upgrade-uninstall.md  install.md  known-limitations.md  learning-loop-feedback-contract.md  learning-loop.md  local-event-privacy.md  local-skill-hub-editions.md  local-skill-hub-security.md  local-skill-hub.md  maintainer-queue-status.md  managed-enterprise-policy-sync-e2e.md  managed-enterprise-policy-sync.md  mcp-audit-inspector.md  mcp-audit-replay.md  (+59 more)
evals/: invocation-scenarios.json  last-effectiveness-run.json
examples/: feedback-report.example.json  roi-receipt.example.json
packs/: README.md
schemas/: billing-status.schema.json  catalog-browser-client-state.schema.json  catalog-browser-result.schema.json  catalog-eval-status.schema.json  catalog-feedback-client-payload.schema.json  catalog-feedback-status.schema.json  catalog-quality-status.schema.json  catalog-request.schema.json  catalog-response.schema.json  client-capabilities.schema.json  collection-manifest.schema.json  collection-updates-request.schema.json  collection-updates-response.schema.json  community-install-request.schema.json  community-install-response.schema.json  community-list-request.schema.json  community-list-response.schema.json  community-preview-request.schema.json  community-preview-response.schema.json  community-search-request.schema.json  community-submission-request.schema.json  community-submission-response.schema.json  community-submission-status-response.schema.json  enhancement-script-response.schema.json  enterprise-policy-assignment.schema.json  enterprise-skill-lock-policy.schema.json  error-response.schema.json  feature-denial.schema.json  feedback-report.schema.json  fixed-pending-eval-status.schema.json  hub-allowlist-sync-request.schema.json  hub-allowlist-sync-response.schema.json  hub-allowlist.schema.json  hub-client-heartbeat.schema.json  hub-client-register.schema.json  hub-error-response.schema.json  hub-heartbeat-request.schema.json  hub-heartbeat-response.schema.json  hub-resolve-request.schema.json  hub-resolve-response.schema.json  (+52 more)
scripts/: check-skill-effectiveness.py  generate-public-alpha-signal-rollup.py  generate-router-inventory.py  (+193 more)
(+942 files in other folders)
